platform/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: togglemaster
  name: togglemaster
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
