platform/base/resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/part-of: togglemaster
  name: togglemaster
  namespace: togglemaster
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  ingressClassName: nginx
  rules:
  - host: togglemaster.local
    http:
      paths:
      - backend:
          service:
            name: auth-service
            port:
              name: http
        path: /validate
        pathType: Prefix
      - backend:
          service:
            name: flag-service
            port:
              name: http
        path: /flags
        pathType: Prefix
      - backend:
          service:
            name: targeting-service
            port:
              name: http
        path: /rules
        pathType: Prefix
      - backend:
          service:
            name: evaluation-service
            port:
              name: http
        path: /evaluate
        pathType: Prefix
